<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.my.ModifyDataActivity"
    android:background="@color/white">

    <include
        android:id="@+id/modify"
        layout="@layout/include_title_an" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/modify"
        android:background="@color/mainbg">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="13dp"
                    android:paddingRight="13dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="头像"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/headdd"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:src="@mipmap/go" />

                        <com.konglianyuyin.mx.app.view.CircularImage
                            android:id="@+id/head_image"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="16dp"
                            android:layout_toLeftOf="@+id/headdd"
                            android:src="@mipmap/ic_launcher" />


                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:background="@color/line" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/nack_tit"
                            android:layout_width="wrap_content"
                            android:layout_height="53dp"
                            android:background="@null"
                            android:gravity="center"
                            android:text="@string/nicheng"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/you_onameeee"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:src="@mipmap/go" />

                        <EditText
                            android:id="@+id/textSend"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:layout_toLeftOf="@id/you_onameeee"
                            android:layout_toRightOf="@id/nack_tit"
                            android:background="@null"
                            android:gravity="right|center_vertical"
                            android:maxLength="6"
                            android:paddingLeft="17dp"
                            android:textColor="#AFA8BE"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/one"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="17dp"
                            android:text="/6"
                            android:textColor="@color/font_dddddd"
                            android:textSize="11sp"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/nick_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toLeftOf="@id/one"
                            android:textColor="#AFA8BE"

                            android:textSize="11sp"
                            android:visibility="gone" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:paddingLeft="13dp"
                    android:paddingRight="13dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/line" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/id_tit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:text="ID号"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text=""
                            android:textColor="#AFA8BE"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/line" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/sex_tit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:text="@string/xingbie"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/sex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text=""
                            android:textColor="#AFA8BE"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/line" />

                    <RelativeLayout
                        android:id="@+id/birthday_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/birthday_tit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:text="@string/shengri"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/birthday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toLeftOf="@id/you_one"
                            android:text=""
                            android:textColor="#AFA8BE"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/you_one"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:src="@mipmap/go" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/line" />

                    <RelativeLayout
                        android:id="@+id/consteation_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/constellation_tit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:text="@string/xingzuo"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/constellation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text=""
                            android:textColor="#AFA8BE"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/line" />

                    <RelativeLayout
                        android:id="@+id/region_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/region_tit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:background="@null"
                            android:text="@string/diqu"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/you_three"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:src="@mipmap/go" />

                        <TextView
                            android:id="@+id/region"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toLeftOf="@id/you_three"
                            android:text=""
                            android:textColor="#AFA8BE"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/line" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_baocun"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="35dp"
                    android:background="@drawable/jianbian_gerenzhongxin2"
                    android:gravity="center"
                    android:text="保存"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
</RelativeLayout>